# caffeine

./: .bazelrc  .clang-format  .codecov.yml  .gitignore  .mergify.yml  BUILD  CMakeLists.txt  Config.h.in  Dockerfile  LICENSE  MODULE.bazel  README.md  WORKSPACE  bazel-bin  bazel-caffeine  bazel-out  bazel-testlogs  local.bazelrc  s-outputq:q  vcpkg.json
distributed/: CMakeLists.txt
distributed/Protos/: operation.capnp
distributed/src/Serialization/: ValueIdMap.cpp
libraries/libc/: BUILD  CMakeLists.txt
src/: CMakeLists.txt
src/ADT/: PersistentArray.cpp  SharedArray.cpp  Span.cpp  StringInterner.cpp
src/IR/: Assertion.cpp  Debug.cpp  EGraph.cpp  EGraphConstprop.cpp  EGraphMatcher.cpp  EGraphMatching.cpp  Operation.cpp  Operation.h  OperationBase.cpp  OperationBuilder.cpp  OperationCache.cpp  OperationData.cpp  OperationSimplifier.cpp  Symbol.cpp  Type.cpp  Value.cpp  Visitor.cpp
src/IR/EMatching/: AllMatchers.cpp  Filters.cpp
src/IR/Operations/: ArrayBase.cpp  EGraphNode.cpp
src/IR/Transforms/: canonicalize.cpp  decompose.cpp  simplify.cpp
src/Interpreter/: AssertionList.cpp  CaffeineContext.cpp  CombinedFailureLogger.cpp  Context.cpp  ContextBacktrace.cpp  ContextEvent.cpp  CtxConstEval.cpp  Debug.cpp  DiskFailureLogger.cpp  Executor.cpp  ExprEval.cpp  ExternalFunction.cpp  Interpreter.cpp  InterpreterContext.cpp  Memory.cpp  Policy.cpp  PrintingFailureLogger.cpp  StackFrame.cpp  Store.cpp  ThreadQueueStore.cpp  TransformBuilder.cpp  TypeidDb.cpp  Value.cpp
src/Interpreter/Builtins/: posix_memalign.cpp  setjmp-longjmp.cpp
src/Interpreter/ExternalFuncs/: Abort.cpp  CaffeineAssert.cpp  CaffeineAssume.cpp  CaffeineBuiltinResolve.cpp  CaffeineSymbolicAlloca.cpp  Calloc.cpp  ChainCall.cpp  Free.cpp  GenericUnwinding.cpp  LongJmp.cpp  MallocAlign.cpp  SetJmp.cpp  UnwindPhase1.cpp  UnwindPhase2.cpp
src/Interpreter/Interpreter/: llvm.smul.with.overflow.cpp  llvm.umul.with.overflow.cpp
src/Interpreter/Intrinsics/: llvm.abs.cpp  llvm.bswap.cpp  llvm.ctlz.cpp  llvm.ctpop.cpp  llvm.cttz.cpp  llvm.eh.typeid.for.cpp  llvm.memcpy.cpp  llvm.memset.cpp  llvm.smul.with.overflow.cpp  llvm.umul.with.overflow.cpp  llvm.vacopy.cpp  llvm.vaend.cpp  llvm.vastart.cpp
src/Interpreter/Store/: CountLimitedStore.cpp  LockfreeStore.cpp  NullContextStore.cpp  QueueingContextStore.cpp  RandomizedContextStore.cpp  ThreadCacheStore.cpp  ThreadQueueStore.cpp  TimeLimitedStore.cpp
src/Memory/: Allocation.cpp  Allocator.cpp  BumpAllocator.cpp  Debug.cpp  Heap.cpp  MemHeap.cpp  Pointer.cpp
src/Model/: AssertionList.cpp  GraphAssertionList.cpp  Value.cpp
src/Passes/: cpplsda.cpp
src/Protos/: BUILD  operation.capnp  solver.capnp  testcase.capnp  tracepoint.capnp
src/Query/: ConstraintSlicer.cpp
src/Serialization/: Serialize.cpp  ValueIdMap.cpp
src/Solver/: CachingSolver.cpp  CanonicalizingSolver.cpp  DecompSolver.cpp  EarlyExitSolver.cpp  InterruptSolver.cpp  LoggingSolver.cpp  ModelEval.cpp  SimplifyingSolver.cpp  SlicingSolver.cpp  Solver.cpp  Z3Solver.cpp  Z3Solver.h
src/Solver/Z3/: Convert.cpp
src/Support/: Assert.cpp  CMakeLists.txt  CopyVTable.cpp  Coverage.cpp  DiagnosticHandler.cpp  LMDB.cpp  Signal.cpp  SyncOStream.cpp  Tracing.cpp  UnsupportedOperation.cpp
test/: BUILD  CMakeLists.txt  skip-test-bazel.sh  skip-test.cpp  tests.bzl
test/regression/: BUILD  CMakeLists.txt  issue-103.fail.write-spans-allocation-boundary.c  issue-103.pass.write-at-end-of-allocation.c  issue-359.pass.pointer-select.c  issue-361.pass.zext-bool.ll  issue-362.pass.load-bool-from-memory.c  issue-488.pass.recursive-struct.c  issue-489.fail.write-to-const-global.c  issue-592.pass.requires-sitofp.c  issue-604.pass.float-to-int-bitcast.c  issue-604.pass.float-to-int-bitcast.ll  issue-607.pass.requires-uitofp.c  issue-609.pass.requires-fptosi.c  issue-609.pass.requires-fptoui.c  issue-618.pass.requires-fpext.c  issue-619.pass.requires-fptrunc.c
test/run-fail/: BUILD  CMakeLists.txt  abort.c  collatz.c  fnv.c  interleave.c  murmurhash3.c  resume.cpp  sample.c  sdiv-nonzero.c  sdiv-udiv-inequal.c  sdiv-zero.c  xorfun.c
test/run-fail/abs/: basic-abs.c
test/run-fail/cpp/: BUILD  error_not_caught.cpp  unwind_phase1_not_found.ll
test/run-fail/fp/: BUILD  approx-sqrt.c  greater-than-all.c  self-equality.c
test/run-fail/intrin/: BUILD  call-longjmp.ll  invoke-longjmp.ll
test/run-fail/make_symbolic/: init-struct.c
test/run-fail/mem/: BUILD  alloca-escaped.c  allocations-anywhere.c  free-stack-alloca.c  global-mem-readwrite.c  interleave.c  select-array.c
test/run-fail/vector/: extractelement1.ll  shufflevector1.ll
test/run-pass/: BUILD  CMakeLists.txt  branch-false.c  branch-true.c  caffeine.h  call-extern-function-ptr.c  cpp-vector.cpp  recurse.c  sdiv-negative.c  sdiv-udiv-equal-nonnegative.c  sext.ll  strlen.c  switch.ll  trunc.ll  udiv-large.c  zext.ll
test/run-pass/abs/: basic-abs.c
test/run-pass/const-folding/: float.ll  int.ll
test/run-pass/cpp/: caffeine_can_catch.cpp  catch_an_exception.cpp  catch_an_int.cpp  global-ctors.cpp  little_exception.cpp  unwind_phase1_catch.cpp  unwind_phase1_catch.ll  unwind_phase1_catchall.ll  unwind_phase1_cleanup.ll  unwind_phase1_filter.ll  unwind_phase1_filterall.ll  unwind_phase1_inheritance.cpp  unwind_phase1_multicatch.cpp  unwind_phase1_multicatch.ll  vector.cpp
test/run-pass/fp/: 2plus2is4.c  nans-are-nans.c
test/run-pass/mem/: BUILD  alloca-basic.c  calloc-is-all-zero.c  const-getelementptr.c  global-array-select.c  global-int-store.c  global-mem-readwrite.c  global-undef-array.ll  global-zeroinitializer-array.ll  global-zeroinitializer.c  interleave.c  malloc-free.c  memcpy-basic.c  memmove-backward.c  memmove-basic.c  memmove-forward.c  memset-basic.c  memset.c  pointer-bitcast.c  posix_memalign-basic.c  posix_memalign-works.c  simple-malloc-free.c  store-to-global.c  (+2 more)
test/unit/: BUILD  CMakeLists.txt  main.cpp
tools/gen-test-main/: CMakeLists.txt  main.cpp
tools/guided-fuzzing/: BUILD  CMakeLists.txt  README.md
tools/opt-plugin/: BUILD  CMakeLists.txt  plugin.cpp  plugins.h
tools/test-serializer/: CMakeLists.txt
(+402 files in other folders)
