"""Caffeine symbolic execution engine
"""

module(
    name = "caffeine",
    version = "0.1.0",
)

# LLVM depends on bazel_skylib so it can't be a module just yet
# bazel_dep(name = "bazel_skylib", version = "1.1.1")
bazel_dep(name = "fmt", version = "8.1.0")
bazel_dep(name = "googletest", version = "1.11.0")
bazel_dep(name = "immer", version = "0.7.0")
bazel_dep(name = "magic_enum", version = "0.7.3")
bazel_dep(name = "tsl_hopscotch_map", version = "2.3.0")
bazel_dep(name = "z3", version = "4.8.14")

# Using this seems to run into some error in bazel
# bazel_dep(name = "rules_pkg", version = "0.5.1")
